--- a/.config/awesome/configuration/picom.conf
+++ b/.config/awesome/configuration/picom.conf
@@ -18,7 +18,7 @@ shadow-offset-x = 12;
 shadow-offset-y = -12;
 shadow-opacity = 0.7;
 
-# shadow-red = 0.0;
+shadow-red = 0.4;
 # shadow-green = 0.0;
 # shadow-blue = 0.0;
 
